--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FinTrackr</title>
+  <title>fintrakr</title>
 </head>
 <body>
-  <p>hello world</p>
+  
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
